--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   firebase_core:
   intl:
   persistent_bottom_nav_bar:
+  path_provider:
+  permission_handler:
+  pdf:
+  open_file:
+  saver_gallery: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/font3/AlQalam-Punjbi.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
